--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,14 @@ uvicorn = "^0.30.5"
 pydantic = "^2.8.2"
 langchain = "^0.2.13"
 langchain-openai = "^0.1.21"
-tiktoken = "^0.7.0"
+langchain-community = "^0.2.12"
+pypdf = "^4.3.1"
+python-dotenv = "^1.0.1"
+faiss-cpu = "^1.8.0.post1"
 
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.2"
 
 [build-system]
 requires = ["poetry-core"]
