--- a/.gitignore
+++ b/.gitignore
@@ -130,6 +130,12 @@ ENV/
 env.bak/
 venv.bak/
 
+# DS_Store
+.DS_Store
+._.DS_Store
+**/.DS_Store
+**/._.DS_Store
+
 # Spyder project settings
 .spyderproject
 .spyproject
