--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ faiss-cpu = "^1.8.0.post1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
+pytest-asyncio = "^0.23.8"
+pytest-ordering = "^0.6"
 
 [build-system]
 requires = ["poetry-core"]
