--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ langchain-community = "^0.2.12"
 pypdf = "^4.3.1"
 python-dotenv = "^1.0.1"
 faiss-cpu = "^1.8.0.post1"
+tiktoken = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
